[gd_scene load_steps=18 format=3 uid="uid://kdws56c0f1mv"]

[ext_resource type="Script" uid="uid://fnrudborlcqa" path="res://system/main.gd" id="1_7rmty"]
[ext_resource type="PackedScene" uid="uid://c5rqi38s0x6p" path="res://objects/room.tscn" id="2_2soig"]
[ext_resource type="Script" uid="uid://bvjero3ul8fie" path="res://system/handlers/mob_handler.gd" id="3_5231d"]
[ext_resource type="PackedScene" uid="uid://wuyu1r1e0d2i" path="res://entities/red_mob.tscn" id="4_i8srq"]
[ext_resource type="PackedScene" uid="uid://cbk6tnuy58hld" path="res://system/handlers/block_handler.tscn" id="5_5231d"]
[ext_resource type="Script" uid="uid://b2pue7uyn5m01" path="res://system/handlers/goal_handler.gd" id="7_io3fq"]
[ext_resource type="PackedScene" uid="uid://by1y61ewiw0pm" path="res://objects/goal.tscn" id="8_jqgdb"]
[ext_resource type="PackedScene" uid="uid://c5nnh7twpycrw" path="res://system/player_interface.tscn" id="9_5231d"]
[ext_resource type="Script" uid="uid://btta0jg43g3ns" path="res://system/escape.gd" id="9_i8srq"]
[ext_resource type="Script" uid="uid://x1pbmgbiv0n3" path="res://system/player_interface.gd" id="10_i8srq"]
[ext_resource type="Theme" uid="uid://oxy3yscs5r7r" path="res://assets/themes/label.tres" id="11_io3fq"]
[ext_resource type="Theme" uid="uid://crgofrwwljspq" path="res://assets/themes/button.tres" id="11_qs5jh"]
[ext_resource type="Script" uid="uid://c8on0m4ybc8cj" path="res://system/discard_new_block.gd" id="12_3mgql"]
[ext_resource type="AudioStream" uid="uid://djwl35athpa0i" path="res://assets/sounds/bg_music_2.wav" id="12_qs5jh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5231d"]
radius = 24.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io3fq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_jqgdb"]
Panel/styles/panel = SubResource("StyleBoxFlat_io3fq")

[node name="main" type="Node2D"]
script = ExtResource("1_7rmty")

[node name="room" parent="." instance=ExtResource("2_2soig")]

[node name="MobHandler" type="Node2D" parent="." node_paths=PackedStringArray("round_start_button", "escape_point") groups=["handler"]]
unique_name_in_owner = true
script = ExtResource("3_5231d")
round_start_button = NodePath("../player_interface/HBoxContainer/button_column/start_round")
escape_point = NodePath("../escape")
metadata/_custom_type_script = "uid://bvjero3ul8fie"

[node name="red_mob" parent="MobHandler" instance=ExtResource("4_i8srq")]
position = Vector2(512, 512)

[node name="BlockHandler" parent="." instance=ExtResource("5_5231d")]
unique_name_in_owner = true
new_round_block_qty = 2
default_spawn_position = Vector2(1206, 256)
multiple_spawn_offset = Vector2(0, 512)

[node name="GoalHandler" type="Node2D" parent="." node_paths=PackedStringArray("player") groups=["handler"]]
unique_name_in_owner = true
script = ExtResource("7_io3fq")
player = NodePath("../player_interface")

[node name="goal" parent="GoalHandler" instance=ExtResource("8_jqgdb")]
position = Vector2(160, 152)

[node name="goal2" parent="GoalHandler" instance=ExtResource("8_jqgdb")]
position = Vector2(160, 876)

[node name="goal3" parent="GoalHandler" instance=ExtResource("8_jqgdb")]
position = Vector2(864, 876)

[node name="goal4" parent="GoalHandler" instance=ExtResource("8_jqgdb")]
position = Vector2(864, 152)

[node name="escape" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(512, 512)
script = ExtResource("9_i8srq")

[node name="Area2D" type="Area2D" parent="escape"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="escape/Area2D"]
shape = SubResource("CircleShape2D_5231d")

[node name="player_interface" parent="." node_paths=PackedStringArray("score_display") instance=ExtResource("9_5231d")]
position = Vector2(512, 510)
script = ExtResource("10_i8srq")
score_display = NodePath("HBoxContainer/display_column/score_qty")

[node name="HBoxContainer" type="HBoxContainer" parent="player_interface"]
custom_minimum_size = Vector2(192, 0)
offset_left = -874.0
offset_top = -448.00003
offset_right = -662.0
offset_bottom = -270.6667
scale = Vector2(1.5, 1.5)

[node name="display_column" type="VBoxContainer" parent="player_interface/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="score" type="Label" parent="player_interface/HBoxContainer/display_column"]
layout_mode = 2
theme = ExtResource("11_io3fq")
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score_qty" type="Label" parent="player_interface/HBoxContainer/display_column"]
layout_mode = 2
theme = ExtResource("11_io3fq")
text = "0"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="player_interface/HBoxContainer/display_column"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_jqgdb")

[node name="button_column" type="VBoxContainer" parent="player_interface/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="start_round" type="Button" parent="player_interface/HBoxContainer/button_column" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("11_qs5jh")
text = "Start
Round"

[node name="discard_new_block" type="Button" parent="player_interface/HBoxContainer/button_column" node_paths=PackedStringArray("player") groups=["buttons"]]
layout_mode = 2
tooltip_text = "Cost: 6 Score
Randomly discards one block
waiting to be placed"
focus_mode = 0
theme = ExtResource("11_qs5jh")
text = "Discard
New Block"
script = ExtResource("12_3mgql")
cost = 6
player = NodePath("../../..")

[node name="bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_qs5jh")
autoplay = true
